Bug 412484 - No date ranges in report list
Summary: No date ranges in report list
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.4
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-30 16:30 UTC by Ralf Habacker
Modified: 2019-10-11 11:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-09-30 16:30:07 UTC
Currently it is required to open a report to see the range it is designed for. It would save user time if the report range would be displayed in the report list.

STEPS TO REPRODUCE
1. start kmymoney
2. open reports

OBSERVED RESULT
There are no report ranges displayed

EXPECTED RESULT
The report range of each report should be displayed
Comment 1 Ralf Habacker 2019-09-30 16:32:45 UTC
Git commit 6f6a9c0745bc4d685b94ca6bb585f3a08b119886 by Ralf Habacker.
Committed on 30/09/2019 at 16:31.
Pushed by habacker into branch '4.8'.

In reports view show report start and end date
FIXED-IN:4.8.5

M  +2    -2    kmymoney/views/kreportsview.cpp
M  +7    -0    kmymoney/views/tocitemreport.cpp

https://commits.kde.org/kmymoney/6f6a9c0745bc4d685b94ca6bb585f3a08b119886
Comment 2 Jack 2019-09-30 19:49:03 UTC
I do not object to this commit, but date range is only one of many criteria or filter conditions for a report.  When I make a custom report (especially if I make several with only slightly differing dates or other filters) I include that information in the name of the report, so I'm not sure how necessary this really is.
Comment 3 Ralf Habacker 2019-09-30 21:05:25 UTC
(In reply to Jack from comment #2)
> I do not object to this commit, but date range is only one of many criteria
> or filter conditions for a report.  When I make a custom report (especially
> if I make several with only slightly differing dates or other filters) I
> include that information in the name of the report, so I'm not sure how
> necessary this really is.

When reports are created, they are often defined with the current or last year, month, day, etc. (At least I found that in many of my defined reports). If the KMyMoney file is opened in subsequent years, such customized reports are no longer available and must be redefined individually for the corresponding year by inspecting each report. Having the date range in the list make it much easier to identify those reports.
Comment 4 Ralf Habacker 2019-10-11 11:14:41 UTC
(In reply to Ralf Habacker from comment #3)
> If the KMyMoney file is opened in subsequent years, such
> customized reports are no longer available and must be redefined
> individually for the corresponding year
I think the problem is much worse unless it is intended that reports are sliding. Without a pre-defined base date, reports with these range types are usable only for the year, month, day in which they were created and in all other time ranges worthless because they contain inaccurate values.