In reports view show report start and end date

BUG:412484
FIXED-IN:4.8.5